--- a/styles.css
+++ b/styles.css
@@ -5,7 +5,7 @@
 body{
     background: radial-gradient(circle, #ff7e5f, #feb47b);
     width: 100%;
-    height: 100vh;
+    height: 100%;
 }
 ul{
     margin-left: 20px;
@@ -19,7 +19,7 @@ ul{
     align-items: center;
     justify-content: space-between;
     height: 10vh;
-    width: 100vw;
+    width: 100%;
 }
 .logo{
     color: #ffff;
@@ -112,8 +112,45 @@ main{
     width: 100%;
     background: radial-gradient(circle, #ff7e5f, #feb47b);
 }
+footer{
+    height: 7vh;
+    background-color: rgb(63, 200, 25);
+    position: relative;
+}
 
 
 /* <<<<<<<<<<<<**********responsiveness************>>>>>>>>>>>>> */
 
-   
+/* Inside your existing media query for smaller screens */
+@media only screen and (max-width: 700px) {
+    .menu-icon {
+        display: block;
+        cursor: pointer;
+        font-size: 24px; /* Adjust as needed */
+        padding: 10px;
+        color: #fff; /* Adjust as needed */
+    }
+
+    .navigation ul {
+        display: none;
+        flex-direction: column;
+        align-items: center;
+        width: 100%;
+        position: absolute;
+        top: 60px;
+        /* background-color: #333;  */
+        z-index: 1;
+    }
+
+    .navigation ul.show {
+        display: flex;
+    }
+
+    .navigation ul li {
+        width: 100%;
+        text-align: center;
+        padding: 10px;
+        border-bottom: 1px solid #555; 
+    }
+
+}
